--- a/app/assets/views/main.html
+++ b/app/assets/views/main.html
@@ -1,4 +1,3 @@
 <div class="container">
-  <h1 class="jumbotron">Hello World</h1>
-  <h4>You've got bootstrap!</h4>
+  <h1 class="jumbotron">Main</h1>
 </div>
